# DocGenerator

./: .gitignore  LICENSE_STATUS.md  MIGRATION_PROVENANCE.md  Makefile  README.md  SOURCE_MANIFEST.sha256  install.sh  main.py
.github/scripts/: scan_high_confidence_secrets.sh
.github/workflows/: ci.yml
tests/: test_main.py
worker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
worker/doc_worker/: __init__.py  config.py  http_client.py  main.py  notifier.py  renderer.py  storage.py  worker.py
worker/scripts/: prove_minio_artifact_chain.py  prove_rabbitmq_archive.py  run_minio_artifact_proof.sh  run_rabbitmq_archive_proof.sh
worker/tests/: test_http_boundary.py  test_rabbitmq_archive_proof.py  test_renderer.py  test_storage.py  test_worker.py
